# python_accelerations

./: CMakeLists.txt  README.md  array_test.py  opencv_test.py
cxx_src/: py_opencv.cpp  py_vector.cpp
multiprocessing_tests/: checkerboard_detection.py
pybind11_tests/: array_test.py  opencv_test.py
